RESOLVED FIXED254913
[GLib] Crash opening webkit://gpu when XDG_CURRENT_DESKTOP is undefined
https://bugs.webkit.org/show_bug.cgi?id=254913
Summary [GLib] Crash opening webkit://gpu when XDG_CURRENT_DESKTOP is undefined
Adrian Perez
Reported 2023-04-03 05:06:07 PDT
To reproduce: % (unset XDG_CURRENT_DESKTOP; epiphany -p webkit://gpu)
Attachments
Adrian Perez
Comment 1 2023-04-03 05:06:47 PDT
We are missing a null check when reading the environment variable.
Adrian Perez
Comment 2 2023-04-03 05:35:04 PDT
EWS
Comment 3 2023-04-03 05:58:00 PDT
Committed 262504@main (6a3c0713422d): <https://commits.webkit.org/262504@main> Reviewed commits have been landed. Closing PR #12314 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2023-04-03 05:58:14 PDT
Note You need to log in before you can comment on or make changes to this bug.