Cherry-pick 262504@main (6a3c0713422d). https://bugs.webkit.org/show_bug.cgi?id=254913

[GLib] Crash opening webkit://gpu when XDG_CURRENT_DESKTOP is undefined
    https://bugs.webkit.org/show_bug.cgi?id=254913

    Reviewed by Philippe Normand.

    * Source/WebKit/UIProcess/API/glib/WebKitProtocolHandler.cpp:
    (WebKit::WebKitProtocolHandler::handleGPU): Check whether picking
    XDG_CURRENT_DESKTOP from the environment returns non-null and the
    variable is not empty before using it.

    Canonical link: https://commits.webkit.org/262504@main